                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 14-02-2006 fixed: Kai Host dialog had missing text labels in private mode.
 - 14-02-2006 fixed: Add source title from Files window.
 - 14-02-2006 fixed: Album Info dialog wasn't displayed correctly.
 - 14-02-2006 fixed: Navigation off page controls on dialogs.
 - 14-02-2006 fixed: Resolution spin control wasn't showing correct values after a change.
 - 14-02-2006 fixed: Info images would not show if the info changed while it was in a delayed animation.
 - 14-02-2006 fixed: [ 1429552] jpgs with garbage data at the start weren't loaded.  We now read up to 4096 bytes to find the real start of the jpeg.
 - 14-02-2006 fixed: [ 1428952 ] LCD.xml had an incorrect $INFO tag for ScreenMode.
 - 13-02-2006 added: three new visibility conditions: playlist.israndom, playlist.isrepeat, playlist.isrepeatone
 - 13-02-2006 changed: the Repeat and Repeat One buttons in the Now Playing window have been consolidated into a single button
 - 13-02-2006 added: two new builtin commands for playlist control, they can be used in the skin or in keymap.xml
		xbmc.playercontrol(random) = enables and disables random playback
		xbmc.playercontrol(repeat) = cycles through states off -> all -> one and back around
 - 13-02-2006 fixed: repeatone was ignored if randomize was enabled on a playlist
 - 13-02-2006 changed: httpapi playfile command to immediately start playback of a playlist.
		it also accepts an extra parameter to force the playlist (note the playlist is CLEARED! before it playback starts).
		if a playlist is not provided, the current playlist is used.
		if there is no current playlist, then 1 is assumed (like the playmedia builtin command)